// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountViewListItem Component should render a component: basic 1`] = `
<div
  class="list-group-item cloudmeter-accountview-list-view-item test"
>
  <div
    class="list-view-pf-actions"
  >
    <div />
  </div>
  <div
    class="list-view-pf-main-info"
  >
    <div
      class="list-view-pf-body"
    >
      <div
        class="list-view-pf-description"
      >
        <div
          class="list-group-item-heading"
        >
          <span
            class="cloudmeter-list-view-item-heading"
          >
            <strong
              class="cloudmeter-list-view-item-heading-title"
            >
              Lorem ipsum
            </strong>
            <br />
            Created 12:00AM, December 1st 2018
          </span>
        </div>
      </div>
      <div
        class="list-view-pf-additional-info"
      >
        <div
          class="list-view-pf-additional-info-item cloudmeter-listview-infoitem"
        >
          <span>
            <span
              aria-hidden="true"
              class="pficon pficon-cluster"
            />
            <strong>
              1
            </strong>
             Images
          </span>
        </div>
        <div
          class="list-view-pf-additional-info-item cloudmeter-listview-infoitem"
        >
          <span>
            <span
              aria-hidden="true"
              class="pficon pficon-screen"
            />
            <strong>
              2
            </strong>
             Instances
          </span>
        </div>
        <div
          class="list-view-pf-additional-info-item cloudmeter-listview-label cloudmeter-listview-label-has-badge"
        >
          <span>
            <span
              aria-hidden="true"
              class="fa fa-clock-o"
            />
            <strong
              data-test="rhel"
            >
              3
            </strong>
          </span>
          <span>
            <span
              class="label label-warning"
            >
              <abbr
                title="Red Hat Enterprise Linux"
              >
                RHEL
              </abbr>
            </span>
             
          </span>
        </div>
        <div
          class="list-view-pf-additional-info-item cloudmeter-listview-label cloudmeter-listview-label-has-badge"
        >
          <span>
            <span
              aria-hidden="true"
              class="fa fa-clock-o"
            />
            <strong
              data-test="rhocp"
            >
              3
            </strong>
          </span>
          <span>
            <span
              class="label label-primary"
            >
              <abbr
                title="Red Hat OpenShift Container Platform"
              >
                RHOCP
              </abbr>
            </span>
             
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccountViewListItem Component should render challenged images: challenged 1`] = `
<div
  class="list-group-item cloudmeter-accountview-list-view-item "
>
  <div
    class="list-view-pf-actions"
  >
    <div />
  </div>
  <div
    class="list-view-pf-main-info"
  >
    <div
      class="list-view-pf-body"
    >
      <div
        class="list-view-pf-description"
      >
        <div
          class="list-group-item-heading"
        >
          <span
            class="cloudmeter-list-view-item-heading"
          >
            <strong
              class="cloudmeter-list-view-item-heading-title"
            >
              Lorem ipsum
            </strong>
            <br />
            Created 12:00AM, December 1st 2018
          </span>
        </div>
      </div>
      <div
        class="list-view-pf-additional-info"
      >
        <div
          class="list-view-pf-additional-info-item cloudmeter-listview-infoitem"
        >
          <span>
            <span
              aria-hidden="true"
              class="pficon pficon-cluster"
            />
            <strong>
              1
            </strong>
             Images
          </span>
        </div>
        <div
          class="list-view-pf-additional-info-item cloudmeter-listview-infoitem"
        >
          <span>
            <span
              aria-hidden="true"
              class="pficon pficon-screen"
            />
            <strong>
              2
            </strong>
             Instances
          </span>
        </div>
        <div
          class="list-view-pf-additional-info-item cloudmeter-listview-label cloudmeter-listview-label-has-badge"
        >
          <span>
            <span
              aria-hidden="true"
              class="fa fa-clock-o"
            />
            <strong
              data-test="rhel"
            >
              0
            </strong>
          </span>
          <span>
            <span
              class="label label-warning"
            >
              <abbr
                title="Red Hat Enterprise Linux"
              >
                RHEL
              </abbr>
            </span>
             
            <span
              aria-hidden="true"
              class="fa fa-flag cloudmeter-pficon-error"
            />
          </span>
        </div>
        <div
          class="list-view-pf-additional-info-item cloudmeter-listview-label cloudmeter-listview-label-has-badge"
        >
          <span>
            <span
              aria-hidden="true"
              class="fa fa-clock-o"
            />
            <strong
              data-test="rhocp"
            >
              0
            </strong>
          </span>
          <span>
            <span
              class="label label-primary"
            >
              <abbr
                title="Red Hat OpenShift Container Platform"
              >
                RHOCP
              </abbr>
            </span>
             
            <span
              aria-hidden="true"
              class="fa fa-flag cloudmeter-pficon-error"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccountViewListItem Component should wrap long names with a on hover title: long names 1`] = `
<div
  class="list-group-item cloudmeter-accountview-list-view-item "
>
  <div
    class="list-view-pf-actions"
  >
    <div />
  </div>
  <div
    class="list-view-pf-main-info"
  >
    <div
      class="list-view-pf-body"
    >
      <div
        class="list-view-pf-description"
      >
        <div
          class="list-group-item-heading"
        >
          <span
            class="cloudmeter-list-view-item-heading"
          >
            <strong
              class="cloudmeter-list-view-item-heading-title"
            >
              <span
                title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sed sodales eros."
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sed sodales eros.
              </span>
            </strong>
            <br />
            Created 12:00AM, December 1st 2018
          </span>
        </div>
      </div>
      <div
        class="list-view-pf-additional-info"
      >
        <div
          class="list-view-pf-additional-info-item cloudmeter-listview-infoitem"
        >
          <span>
            <span
              aria-hidden="true"
              class="pficon pficon-cluster"
            />
            <strong>
              1
            </strong>
             Images
          </span>
        </div>
        <div
          class="list-view-pf-additional-info-item cloudmeter-listview-infoitem"
        >
          <span>
            <span
              aria-hidden="true"
              class="pficon pficon-screen"
            />
            <strong>
              2
            </strong>
             Instances
          </span>
        </div>
        <div
          class="list-view-pf-additional-info-item cloudmeter-listview-label cloudmeter-listview-label-has-badge"
        >
          <span>
            <span
              aria-hidden="true"
              class="fa fa-clock-o"
            />
            <strong
              data-test="rhel"
            >
              3
            </strong>
          </span>
          <span>
            <span
              class="label label-warning"
            >
              <abbr
                title="Red Hat Enterprise Linux"
              >
                RHEL
              </abbr>
            </span>
             
          </span>
        </div>
        <div
          class="list-view-pf-additional-info-item cloudmeter-listview-label cloudmeter-listview-label-has-badge"
        >
          <span>
            <span
              aria-hidden="true"
              class="fa fa-clock-o"
            />
            <strong
              data-test="rhocp"
            >
              3
            </strong>
          </span>
          <span>
            <span
              class="label label-primary"
            >
              <abbr
                title="Red Hat OpenShift Container Platform"
              >
                RHOCP
              </abbr>
            </span>
             
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
